--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -6,7 +6,10 @@
   properties = @model_config.list.with(:view => self, :object => @abstract_model.model.new).visible_fields
   # columns paginate
   @filterable_fields = @model_config.list.fields.select(&:filterable?)
-  @style, @other, properties = get_column_set(properties)
+  sets = get_column_sets(properties)
+  properties = sets[params[:set].to_i]
+  other_left = ((params[:set].to_i - 1) >= 0) && sets[params[:set].to_i - 1].present?
+  other_right = sets[params[:set].to_i + 1].present?
   @index = 0
   @ordered_filters = (params[:filters] || @model_config.list.filters).inject({}) { |memo, filter|
     field_name = filter.is_a?(Array) ? filter.first : filter
@@ -44,8 +47,9 @@
 
 #list
   %style
-    - @style.each do |key, value|
-      \.grid thead #{key} { width: #{value[:width] }px; }
+    - properties.select{ |p| p.column_width.present? }.each do |property|
+      = "#list th.#{property.css_class} { width: #{property.column_width}px; min-width: #{property.column_width}px; }"
+      = "#list td.#{property.css_class} { max-width: #{property.column_width}px; }"
   = form_tag(index_path(params.except(*%w[page filters query])), :method => :post, :remote => true) do
     .row
       .span12
@@ -65,14 +69,16 @@
           %th.first.shrink
             - if can_bulk_action
               %input.checkbox.toggle{:type => "checkbox"}
-          %th.other.left.shrink{ :style => "#{'display: none' if @other.include?("left")}" }...
+          - if other_left
+            %th.other.left.shrink= "..." 
           - properties.each do |property|
             - selected = (sort == property.name.to_s)
             - if property.sortable
               - sort_location = index_path params.except('page').merge(:sort => property.name, :sort_reverse => (selected && sort_reverse != 'true') ? 'true' : 'false')
               - sort_direction = selected ? (sort_reverse == 'true' ? "headerSortUp" : "headerSortDown") : nil
-            %th{:class => "#{property.sortable && "header" || nil} #{property.sortable && sort_direction ? sort_direction : nil} #{property.css_class}", :'data-link' => (property.sortable && sort_location)}= property.label
-          %th.other.right.shrink{ :style => "#{'display: none' if @other.include?("right")}" }...
+            %th{:class => "#{property.sortable && "header" || nil} #{property.sortable && sort_direction ? sort_direction : nil} #{property.css_class} #{property.type_css_class}", :'data-link' => (property.sortable && sort_location)}= property.label
+          - if other_right
+            %th.other.right.shrink= "..."
           %th.last.shrink
       %tbody
         - @objects.each do |object|
@@ -80,13 +86,13 @@
             %td.select.action
               - if can_bulk_action
                 = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
-            - other_left = index_path(params.merge(:set => (params[:set].to_i - 1)))
-            %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
+            - if other_left_link ||= other_left && index_path(params.merge(:set => (params[:set].to_i - 1)))
+              %td.other.left= link_to "...", other_left_link, :remote => true
             - properties.map{ |property| property.bind(:object, object) }.each do |property|
               - value = property.pretty_value
-              %td{:class => property.css_class, :title => strip_tags(value)}= value
-            - other_right = index_path(params.merge(:set => (params[:set].to_i + 1)))
-            %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
+              %td{:class => "#{property.css_class} #{property.type_css_class}", :title => strip_tags(value)}= value
+            - if other_right_link ||= other_right && index_path(params.merge(:set => (params[:set].to_i + 1)))
+              %td.other.right= link_to "...", other_right_link, :remote => true
             %td.last.links
               %ul.inline= render :partial => 'rails_admin/main/object_links', :locals => { :add_active_class => false, :model_name => params[:model_name], :object => object }
     - unless params[:all]
