--- a/app/assets/javascripts/rails_admin/rails_admin.js.erb
+++ b/app/assets/javascripts/rails_admin/rails_admin.js.erb
@@ -1,6 +1,6 @@
 <% 
   theme = :default
-  require_asset 'jquery'
+  require_asset 'rails_admin/jquery-1.6.4.min'
   require_asset 'jquery_ujs'
   require_asset 'jquery.remotipart'
   require_asset 'rails_admin/jquery-ui-1.8.16.custom.js'
