--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -94,13 +94,13 @@
             %td.select.action
               - if can_bulk_action
                 = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
-            - if other_left_link ||= other_left && index_path(params.except('set').merge(params[:set].to_i != 1 ? {:set => (params[:set].to_i - 1)} : {}))
-              %td.other.left= link_to "...", other_left_link, :class => 'pjax'
+            - if @other_left_link ||= other_left && index_path(params.except('set').merge(params[:set].to_i != 1 ? {:set => (params[:set].to_i - 1)} : {}))
+              %td.other.left= link_to "...", @other_left_link, :class => 'pjax'
             - properties.map{ |property| property.bind(:object, object) }.each do |property|
               - value = property.pretty_value
               %td{:class => "#{property.css_class} #{property.type_css_class}", :title => strip_tags(value)}= value
-            - if other_right_link ||= other_right && index_path(params.merge(:set => (params[:set].to_i + 1)))
-              %td.other.right= link_to "...", other_right_link, :class => 'pjax'
+            - if @other_right_link ||= other_right && index_path(params.merge(:set => (params[:set].to_i + 1)))
+              %td.other.right= link_to "...", @other_right_link, :class => 'pjax'
             %td.last.links
               %ul.inline= render :partial => 'rails_admin/main/object_links', :locals => { :add_active_class => false, :model_name => params[:model_name], :object => object }
     - unless params[:all]
