--- a/app/views/rails_admin/main/_form_file_upload.html.haml
+++ b/app/views/rails_admin/main/_form_file_upload.html.haml
@@ -1,6 +1,6 @@
-- file = @object.send(field.method_name).presence
+- file = form.object.send(field.method_name).presence
 
-.toggle{:style => ('display:none;' if file && field.delete_method && @object.send(field.delete_method) == '1')}
+.toggle{:style => ('display:none;' if file && field.delete_method && form.object.send(field.delete_method) == '1')}
   - if value = field.pretty_value
     = value
     %span.row
