--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -1,11 +1,12 @@
 :ruby
   related_id = params[:associations] && params[:associations][field.name.to_s]
   config = field.associated_model_config
-
-  if @object.new_record? && related_id.present? && related_id != 'new'
+  source_abstract_model = RailsAdmin.config(form.object.class).abstract_model
+  
+  if form.object.new_record? && related_id.present? && related_id != 'new'
     selected = [config.abstract_model.get(related_id)]
   else
-    selected = @object.send(field.name)
+    selected = form.object.send(field.name)
   end
   selected_ids = selected.map(&:id)
 
@@ -24,10 +25,10 @@
   end
 
 %input{:name => field.dom_name, :type => "hidden", :value => ""}
-= form.select field.method_name, collection, { :selected => selected_ids, :object => @object }, field.html_attributes.merge({:'data-edit-url' => edit_url, :multiple => true})
+= form.select field.method_name, collection, { :selected => selected_ids, :object => form.object }, field.html_attributes.merge({:'data-edit-url' => edit_url, :multiple => true})
 - if authorized? :new, config.abstract_model
   - path_hash = { :model_name => config.abstract_model.to_param }
-  - path_hash.merge!({ :associations => { field.inverse_of => (@object.id || 'new') } }) if field.inverse_of
+  - path_hash.merge!({ :associations => { field.inverse_of => (form.object.id || 'new') } }) if field.inverse_of
   = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => new_path(path_hash) }, :class => "create btn", :style => 'margin-left:10px'
 :javascript
   jQuery(function($) {
@@ -36,7 +37,7 @@
       createQuery: function(query) {
         return { query: query }
       },
-      remote_source: "#{index_path(field.associated_model_config.abstract_model, :source_object_id => @object.id, :source_abstract_model => @abstract_model.to_param, :associated_collection => field.name, :current_action => current_action, :compact => true).html_safe}",
+      remote_source: "#{index_path(field.associated_model_config.abstract_model, :source_object_id => form.object.id, :source_abstract_model => source_abstract_model.to_param, :associated_collection => field.name, :current_action => current_action, :compact => true).html_safe}",
       sortable: #{field.orderable ? 'true' : 'false'},
       cacheAll: #{field.associated_collection_cache_all ? 'true' : 'false'},
       regional: {
