--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -1,13 +1,15 @@
 = form.send field.view_helper, field.method_name, field.html_attributes
 
 - if field.ckeditor
-  -# needed for modal windows
   = javascript_tag do
     var CKEDITOR_BASEPATH = '/javascripts/ckeditor/';
   = javascript_include_tag "/javascripts/ckeditor/ckeditor.js"
   = javascript_tag do
-    jQuery(function($) {
-    if(!$("#modal").length){
-    CKEDITOR.replace('#{field.dom_id}', { customConfig : '#{field.ckeditor_config_js.html_safe}' });
-    }
-    });
+    :plain
+      jQuery(function($) {
+        if(!$("##{form.dom_id(field)}").parents(".fields_blueprint").length) {
+          if(!$("#modal").length){
+            CKEDITOR.replace('#{form.dom_id(field)}', { customConfig : '#{field.ckeditor_config_js.html_safe}' });
+          }
+        }
+      });
