--- a/app/views/rails_admin/main/_form_enumeration.html.haml
+++ b/app/views/rails_admin/main/_form_enumeration.html.haml
@@ -1,8 +1,4 @@
 = form.select field.method_name, field.enum, {:include_blank => true}, field.html_attributes.reverse_merge({ :placeholder => t('admin.index.search') })
-= javascript_tag do
+= form.javascript_for(field) do
   :plain
-    jQuery(function($) {
-      if(!$("##{form.dom_id(field)}").parents(".fields_blueprint").length) {
-        $("##{"#{form.dom_id(field)}"}").filteringSelect({});
-      }
-    })
+    $("#{form.js_namespace(field)} input").filteringSelect({});
