--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -27,34 +27,30 @@
 %input{:name => form.dom_name(field), :type => "hidden", :value => ""}
 = form.select field.method_name, collection, { :selected => selected_ids, :object => form.object }, field.html_attributes.merge({:'data-edit-url' => edit_url, :multiple => true})
 - if authorized? :new, config.abstract_model
-  - path_hash = { :model_name => config.abstract_model.to_param }
+  - path_hash = { :model_name => config.abstract_model.to_param, :modal => true }
   - path_hash.merge!({ :associations => { field.inverse_of => (form.object.id || 'new') } }) if field.inverse_of
   = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => new_path(path_hash) }, :class => "create btn", :style => 'margin-left:10px'
-:javascript
-  jQuery(function($) {
-    if(!$("##{form.dom_id(field)}").parents(".fields_blueprint").length) {
-      $("##{form.dom_id(field)}").filteringMultiselect({
-        xhr: #{xhr},
-        createQuery: function(query) {
-          return { query: query }
-        },
-        remote_source: "#{index_path(field.associated_model_config.abstract_model, :source_object_id => form.object.id, :source_abstract_model => source_abstract_model.to_param, :associated_collection => field.name, :current_action => current_action, :compact => true).html_safe}",
-        sortable: #{field.orderable ? 'true' : 'false'},
-        cacheAll: #{field.associated_collection_cache_all ? 'true' : 'false'},
-        regional: {
-          chooseAll: "#{t("admin.new.chose_all")}",
-          chosen: "#{t("admin.new.chosen", :name => config.label_plural)}",
-          clearAll:  "#{t("admin.new.clear_all")}",
-          search: "#{t("admin.index.search")}",
-          up: "#{t("admin.new.up")}",
-          down: "#{t("admin.new.down")}"
-        }
-
-      });
-      if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
-        $("##{form.dom_id(field)}_field .btn").remove();
-      } else {
-        $("##{form.dom_id(field)}_field").remoteForm();
+= form.javascript_for(field) do
+  :plain
+    $("#{form.js_namespace(field)} select").filteringMultiselect({
+      xhr: #{xhr},
+      createQuery: function(query) {
+        return { query: query }
+      },
+      remote_source: "#{index_path(field.associated_model_config.abstract_model, :source_object_id => form.object.id, :source_abstract_model => source_abstract_model.to_param, :associated_collection => field.name, :current_action => current_action, :compact => true).html_safe}",
+      sortable: #{field.orderable ? 'true' : 'false'},
+      cacheAll: #{field.associated_collection_cache_all ? 'true' : 'false'},
+      regional: {
+        chooseAll: "#{t("admin.new.chose_all")}",
+        chosen: "#{t("admin.new.chosen", :name => config.label_plural)}",
+        clearAll:  "#{t("admin.new.clear_all")}",
+        search: "#{t("admin.index.search")}",
+        up: "#{t("admin.new.up")}",
+        down: "#{t("admin.new.down")}"
       }
+    });
+    if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
+      $("#{form.js_namespace(field)} .btn").remove();
+    } else {
+      $("#{form.js_namespace(field)}").remoteForm();
     }
-  });
