--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -14,7 +14,7 @@
   
   current_action = params[:action].in?(['create', 'new']) ? 'create' : 'update'
   
-  edit_url = authorized?(:edit, config.abstract_model) ? edit_path(:model_name => config.abstract_model.to_param, :id => '__ID__') : ''
+  edit_url = authorized?(:edit, config.abstract_model) ? edit_path(:model_name => config.abstract_model.to_param, :modal => true, :id => '__ID__') : ''
   
   xhr = !field.associated_collection_cache_all
   
@@ -23,28 +23,24 @@
 = form.select field.method_name, collection, { :selected => selected_id, :include_blank => true }, field.html_attributes.reverse_merge({:placeholder => t('admin.index.search')})
 
 - if authorized? :new, config.abstract_model
-  - path_hash = { :model_name => config.abstract_model.to_param }
+  - path_hash = { :model_name => config.abstract_model.to_param, :modal => true }
   - path_hash.merge!({ :associations => { field.inverse_of => (form.object.id || 'new') } }) if field.inverse_of
   = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => new_path(path_hash) }, :class => "btn create", :style => 'float:left; margin-left:10px'
 
 - if edit_url.present?
   = link_to t('admin.actions.update').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => edit_url }, :class => "btn update #{field.value.nil? && 'disabled'}", :style => 'float:left; margin-left:10px'
 
-= javascript_tag do
+= form.javascript_for(field) do
   :plain
-    jQuery(function($) {
-      if(!$("##{form.dom_id(field)}").parents(".fields_blueprint").length) {
-        $("##{form.dom_id(field)}").filteringSelect({
-          xhr: #{xhr},
-          createQuery: function(query) {
-            return { query: query }
-          },
-          remote_source: "#{index_path(config.abstract_model.to_param, :source_object_id => form.object.id, :source_abstract_model => source_abstract_model.to_param, :associated_collection => field.name, :current_action => current_action, :compact => true).html_safe}"
-        });
-        if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
-          $("##{form.dom_id(field)}_field .btn").hide();
-        } else {
-          $("##{form.dom_id(field)}_field").remoteForm();
-        }
-      }
+    $("#{form.js_namespace(field)} select").filteringSelect({
+      xhr: #{xhr},
+      createQuery: function(query) {
+        return { query: query }
+      },
+      remote_source: "#{index_path(config.abstract_model.to_param, :source_object_id => form.object.id, :source_abstract_model => source_abstract_model.to_param, :associated_collection => field.name, :current_action => current_action, :compact => true).html_safe}"
     });
+    if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
+      $("#{form.js_namespace(field)} .btn").hide();
+    } else {
+      $("#{form.js_namespace(field)}").remoteForm();
+    }
