--- a/app/views/rails_admin/main/_form_nested_one.html.haml
+++ b/app/views/rails_admin/main/_form_nested_one.html.haml
@@ -1,5 +1,4 @@
 - label = field.associated_model_config.abstract_model.pretty_name.downcase
 - form.object.send("build_#{field.name}") unless form.object.send(field.name)
 = form.fields_for field.name do |nested_form|
-  = nested_form.render(:create, field.associated_model_config, true)
-  
+  = nested_form.generate({:action => :create, :model_config => field.associated_model_config, :nested => true})
