--- a/app/views/rails_admin/main/_form_polymorphic_association.html.haml
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.haml
@@ -9,29 +9,25 @@
 = form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, :id => column_type_dom_id
 = form.select field.method_name, collection, {:include_blank => true, :selected => selected.try(:id)}, :style => "margin-left:10px;"
 
-= javascript_tag do
+= form.javascript_for(field) do
   :plain
-    jQuery(function($) {
-      if(!$("##{form.dom_id(field)}").parents(".fields_blueprint").length) {
-        var urls = #{field.polymorphic_type_urls.to_json.html_safe };
-        $("##{column_type_dom_id }").bind("change", function(e){
-          if ("" == $(this).val()) {
-            $("##{ form.dom_id(field) }").html('<option value=""></option>');
-          } else {
-            $.ajax({
-              url: urls[$(this).val()],
-              data: { compact: true, all: true },
-              beforeSend: function(xhr) {
-                xhr.setRequestHeader("Accept", "application/json");
-              },
-              success: function(data, status, xhr) {
-                var html = '<option></option>';
-                $(data).each(function(i, el) {
-                  html += '<option value="' + el.id + '">' + el.label + '</option>';
-                });
-                $("##{ form.dom_id(field) }").html(html);
-              }
+    var urls = #{field.polymorphic_type_urls.to_json.html_safe };
+    $("#{form.js_namespace(field)} ##{column_type_dom_id}").bind("change", function(e){
+      if ("" == $(this).val()) {
+        $("##{ form.dom_id(field) }").html('<option value=""></option>');
+      } else {
+        $.ajax({
+          url: urls[$(this).val()],
+          data: { compact: true, all: true },
+          beforeSend: function(xhr) {
+            xhr.setRequestHeader("Accept", "application/json");
+          },
+          success: function(data, status, xhr) {
+            var html = '<option></option>';
+            $(data).each(function(i, el) {
+              html += '<option value="' + el.id + '">' + el.label + '</option>';
             });
+            $("#{form.js_namespace(field)} ##{ form.dom_id(field) }").html(html);
           }
         });
       }
