--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -4,12 +4,6 @@
   = javascript_tag do
     var CKEDITOR_BASEPATH = '/javascripts/ckeditor/';
   = javascript_include_tag "/javascripts/ckeditor/ckeditor.js"
-  = javascript_tag do
+  = form.javascript_for(field, :modal => false) do
     :plain
-      jQuery(function($) {
-        if(!$("##{form.dom_id(field)}").parents(".fields_blueprint").length) {
-          if(!$("#modal").length){
-            CKEDITOR.replace('#{form.dom_id(field)}', { customConfig : '#{field.ckeditor_config_js.html_safe}' });
-          }
-        }
-      });
+      CKEDITOR.replace('#{form.js_namespace(field)} textarea', { customConfig : '#{field.ckeditor_config_js.html_safe}' });
