--- a/app/views/rails_admin/main/_form_file_upload.html.haml
+++ b/app/views/rails_admin/main/_form_file_upload.html.haml
@@ -3,10 +3,9 @@
 .toggle{:style => ('display:none;' if file && field.delete_method && form.object.send(field.delete_method) == '1')}
   - if value = field.pretty_value
     = value
-    %span.row
   = form.file_field(field.name, field.html_attributes)
 - if field.optional? && field.errors.blank? && file && field.delete_method
-  %span.label.notice{:style => 'cursor:pointer;', :onclick => "jQuery(this).siblings('[type=checkbox]').click(); jQuery(this).siblings('.toggle').toggle('slow'); jQuery(this).toggleClass('important notice'); "}
+  %a.label.notice{:href => '#', :onclick => "jQuery(this).siblings('[type=checkbox]').click(); jQuery(this).siblings('.toggle').toggle(); jQuery(this).toggleClass('important notice'); return false"}
     = I18n.t('admin.actions.delete').capitalize + " #{field.method_name}"
   = form.check_box(field.delete_method, :style => 'display:none;' )
 - if field.cache_method
