--- a/app/views/rails_admin/main/_form_nested_many.html.haml
+++ b/app/views/rails_admin/main/_form_nested_many.html.haml
@@ -1,5 +1,6 @@
-- label = field.associated_model_config.abstract_model.pretty_name.downcase
 = form.fields_for field.name do |nested_form|
-  = nested_form.generate({:action => :create, :model_config => field.associated_model_config, :nested => true})
-  = nested_form.link_to_remove "Remove this #{label}"
-= form.link_to_add "Add a #{label}", field.name
+  %blockquote
+    = nested_form.link_to_remove "Remove", :class => 'label notice'
+    = nested_form.generate({:action => :create, :model_config => field.associated_model_config, :nested_in => field.name })
+    %hr
+= form.link_to_add "Add a #{field.associated_model_config.abstract_model.pretty_name.downcase}", field.name, :class => 'label notice'
