--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -60,6 +60,7 @@
         %span.help-inline= t('admin.export.csv.col_sep_help', :value => t('admin.export.csv.default_col_sep'))
 
   .actions
+    %input{:type => :hidden, :name => 'return_to', :value => (params[:return_to].presence || request.referer)}
     %button.btn.primary{:type => "submit", :name => 'csv'}
       = t("admin.export.confirmation", :name => 'csv')
     %button.btn.info{:type => "submit", :name => 'json'}
