--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -6,4 +6,4 @@
   = javascript_include_tag "/javascripts/ckeditor/ckeditor.js"
   = form.javascript_for(field, :modal => false) do
     :plain
-      CKEDITOR.replace('#{form.js_namespace(field)} textarea', { customConfig : '#{field.ckeditor_config_js.html_safe}' });
+      CKEDITOR.replace('#{form.dom_id(field)}', { customConfig : '#{field.ckeditor_config_js.html_safe}' });
