removed automatic groups for associations (made no sense), add legend instead for nested forms hided default group's legend when it is not customized. (useless) nested forms should look nicer (removed extra left-padding)

--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -11,8 +11,27 @@
   }
 }
 
-blockquote hr {
-  margin-left: -15px;
+/* remove blockquote padding + border recursively */
+form blockquote fieldset { margin-left:-10px; }
+form blockquote blockquote fieldset { margin-left:-20px; }
+form blockquote blockquote blockquote fieldset { margin-left:-30px; }
+
+form {
+  blockquote {
+    padding-top:5px;
+    padding-left:5px;
+    border-left-width:5px;
+    margin-bottom:0px;
+  
+    .remove_nested_fields {
+      margin-top:4px;
+    }
+    hr {
+      margin-left: -5px;
+      margin-top: 10px;
+      margin-bottom: 3px;
+    }
+  }
 }
 
 a.label {
