--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -32,7 +32,7 @@
   = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => new_path(path_hash) }, :class => "create btn", :style => 'margin-left:10px'
 = form.javascript_for(field) do
   :plain
-    $("#{form.js_namespace(field)} select").filteringMultiselect({
+    $("#{form.jquery_namespace(field)} select").filteringMultiselect({
       xhr: #{xhr},
       createQuery: function(query) {
         return { query: query }
@@ -50,7 +50,7 @@
       }
     });
     if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
-      $("#{form.js_namespace(field)} .btn").remove();
+      $("#{form.jquery_namespace(field)} .btn").remove();
     } else {
-      $("#{form.js_namespace(field)}").remoteForm();
+      $("#{form.jquery_namespace(field)}").remoteForm();
     }
