--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -27,7 +27,7 @@
                     = check_box_tag "schema[#{list}][]", field.name, true, { :id => "schema_#{list}_#{field.name}" }
                     %strong= @abstract_model.model.human_attribute_name(field.name)
       - visible_fields.select{ |f| f.association? && !f.association[:polymorphic] }.each do |field|
-        .span5.clearfix
+        .span5.clearfix{:style => 'float:left;'}
           - association = field.association
           - associated_model = association[:type] == :belongs_to ? association[:parent_model] : association[:child_model]
           - fields = RailsAdmin.config(associated_model).export.with(:view => self, :object => associated_model.new).visible_fields.select{ |f| !f.association? }
