--- a/app/views/rails_admin/main/_form_colorpicker.html.haml
+++ b/app/views/rails_admin/main/_form_colorpicker.html.haml
@@ -1,4 +1,4 @@
-= form.send field.view_helper, field.method_name, field.html_attributes.reverse_merge({:style => "background-color: #{field.color}"})
+= form.send field.view_helper, field.method_name, field._html_attributes.reverse_merge({:style => "background-color: #{field.color}"})
 
 = javascript_include_tag asset_path 'rails_admin/jquery.colorpicker.js'
 = stylesheet_link_tag asset_path 'rails_admin/jquery.colorpicker.css'
