--- a/app/views/rails_admin/main/_form_field.html.haml
+++ b/app/views/rails_admin/main/_form_field.html.haml
@@ -1,1 +1,1 @@
-= form.send field.view_helper, field.method_name, field.html_attributes
+= form.send field.view_helper, field.method_name, field._html_attributes
