--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -25,7 +25,7 @@
   end
 
 %input{:name => form.dom_name(field), :type => "hidden", :value => ""}
-= form.select field.method_name, collection, { :selected => selected_ids, :object => form.object }, field.html_attributes.merge({:'data-edit-url' => edit_url, :multiple => true})
+= form.select field.method_name, collection, { :selected => selected_ids, :object => form.object }, field._html_attributes.merge({:'data-edit-url' => edit_url, :multiple => true})
 - if authorized? :new, config.abstract_model
   - path_hash = { :model_name => config.abstract_model.to_param, :modal => true }
   - path_hash.merge!({ :associations => { field.inverse_of => (form.object.id || 'new') } }) if field.inverse_of
