--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -1,4 +1,4 @@
-= form.send field.view_helper, field.method_name, field.html_attributes
+= form.send field.view_helper, field.method_name, field._html_attributes
 
 - if field.ckeditor
   = javascript_tag do
