Theme related wording [ci skip]

--- a/app/assets/stylesheets/rails_admin/themes/default/mixins.css.scss
+++ b/app/assets/stylesheets/rails_admin/themes/default/mixins.css.scss
@@ -1,1 +1,7 @@
-/* All sass mixins should be overriden/created here */
+/*
+  Customize Sass mixins from Twitter-Bootstrap/RailsAdmin theme or add new ones for your own use.
+
+  Resources:
+  
+  https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap/mixins.css.scss
+*/
