--- a/app/assets/stylesheets/rails_admin/themes/default/variables.css.scss
+++ b/app/assets/stylesheets/rails_admin/themes/default/variables.css.scss
@@ -1,1 +1,11 @@
-/* All sass variables should be overriden/created here */
+/*
+  Customize Sass variables from Twitter-Bootstrap/RailsAdmin theme or add new ones for your own use.
+
+  Test me: pink links
+  
+  $linkColor: #F0F;
+
+  Resources:
+  
+  https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap/variables.css.scss
+*/
