--- a/app/views/rails_admin/main/_object_links.html.haml
+++ b/app/views/rails_admin/main/_object_links.html.haml
@@ -18,6 +18,6 @@
   %li.history_object_link{:class => ('active' if add_active_class && current_page?(link))}
     = link_to t("admin.history.name"), link
 
-- if authorized?(:show_in_app, @abstract_model, object) && (link = (main_app.url_for(object.id) rescue nil))
+- if authorized?(:show_in_app, @abstract_model, object) && (link = (main_app.url_for(object) rescue nil))
   %li.show_in_app_object_link
     = link_to t("admin.show.show_in_app"), link
