--- a/app/views/rails_admin/main/_object_links.html.haml
+++ b/app/views/rails_admin/main/_object_links.html.haml
@@ -13,7 +13,7 @@
   %li.delete_object_link{:class => ('active' if add_active_class && current_page?(link))}
     = link_to t("admin.index.delete_action"), link
 
-- if authorized? :history, @abstract_model, object
+- if @auditing_adapter && authorized?(:history, @abstract_model, object)
   - link = history_object_path(model_name, object.id)
   %li.history_object_link{:class => ('active' if add_active_class && current_page?(link))}
     = link_to t("admin.history.name"), link
